fixed overflowing

--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ body {
 .container {
   display: grid;
   grid-template-columns: [full-start] 4fr [center-start] repeat(10, [col-start] 1fr [col-end]) [center-end] 4fr [full-end];
-  grid-template-rows: 90vh 80vh 70vh 70vh 70vh 70vh 100vh; }
+  grid-template-rows: 90vh 80vh 70vh 70vh 70vh 90vh 100vh; }
   @media only screen and (max-width: 81.25em) {
     .container {
       grid-template-columns: [full-start] [center-start] repeat(10, [col-start] 1fr [col-end]) [center-end] [full-end]; } }
